@@ -81,6 +81,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #23600: Default implementation of tzinfo.fromutc() was returning
+  wrong results in some cases.
+
 - Issue #25203: Failed readline.set_completer_delims() no longer left the
   module in inconsistent state.
 
